src/objects/Influence_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - TAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_Influence_Registration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>It is used as a Place holder for Influence Registration ID of MSI SFDC.</description>
        <externalId>true</externalId>
        <label>EVM Influence Registration ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Influence Registration</relationshipLabel>
        <relationshipName>Influence_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Influence Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Influence Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Influence Registration</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>